[MODINVOICE-608]. Revert unnecessary changes